--- a/index.html
+++ b/index.html
@@ -2,14 +2,59 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SeeBee</title>
 </head>
 
 <body>
+  <div class="header">
+    <img src="./assets/bee_1024x1024.jpg" alt="Bee">
+    <div class="right-links">
+      <ul>
+        <li>CODEFORCES</li>
+        <li>AtCoder</li>
+        <li>LeetCode</li>
+      </ul>
+    </div>
 
+    <div class="intro">
+      <div>
+        <h1>SeeBee</h1>
+        <p>SeeBee collects competitive programming websites for you</p>
+        <button>Sign up</button>
+      </div>
+      <img src="./assets/bee_1920.jpg" alt="Bee">
+    </div>
+
+    <div class="info">
+      <h2>most-known websites for CP</h2>
+      <div class="card-collection">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+      </div>
+    </div>
+
+    <div class="qote">
+      <p></p>
+      <p></p>
+    </div>
+
+    <div class="sign-up-call">
+      <div>
+        <h4>Call to action It's time!</h4>
+        <p></p>
+      </div>
+      <button>Sign up</button>
+    </div>
+
+    <div class="footer">
+      Copyright © <a href="https://www.theodinproject.com/">The Odin Project 2021</a>
+    </div>
+  </div>
 </body>
 
 </html>
