--- a/index.html
+++ b/index.html
@@ -6,28 +6,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SeeBee</title>
+  <link rel="stylesheet" href="./styles.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="header">
-    <img src="./assets/bee_1024x1024.jpg" alt="Bee">
-    <div class="right-links">
-      <ul>
-        <li>CODEFORCES</li>
-        <li>AtCoder</li>
-        <li>LeetCode</li>
-      </ul>
+    <div class="hero">
+      <div class="nav-bar">
+        <a href="./index.html"><img src="./assets/bee.png" alt="Bee"></a>
+        <ul class="right-links">
+          <li><a href="https://codeforces.com/">CODEFORCES</a></li>
+          <li><a href="https://atcoder.jp/">AtCoder</a></li>
+          <li><a href="https://leetcode.com/">LeetCode</a></li>
+        </ul>
+      </div>
+
+      <div class="intro">
+        <div>
+          <h1>SeeBee</h1>
+          <p>Get the best Competitive Programming websites for free. Enjoy solving all sorts of problems. Make sure to sign up to get offers, prizes and more</p>
+          <button class="sign-up-btn">Sign up</button>
+        </div>
+        <img src="./assets/bee_1920.jpg" alt="Bee">
+      </div>
     </div>
   </div>
 
-  <div class="intro">
-    <div>
-      <h1>SeeBee</h1>
-      <p>SeeBee collects competitive programming websites for you</p>
-      <button>Sign up</button>
-    </div>
-    <img src="./assets/bee_1920.jpg" alt="Bee">
-  </div>
 
   <div class="info">
     <h2>most-known websites for CP</h2>
