Finish info section
`index.html`
* impalement `card`
* write content

`styles.css`
* add css for info section

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SeeBee</title>
   <link rel="stylesheet" href="./styles.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -26,7 +26,8 @@
       <div class="intro">
         <div>
           <h1>SeeBee</h1>
-          <p>Get the best Competitive Programming websites for free. Enjoy solving all sorts of problems. Make sure to sign up to get offers, prizes and more</p>
+          <p>Get the best Competitive Programming websites for free. Enjoy solving all sorts of problems. Make sure to
+            sign up to get offers, prizes and more</p>
           <button class="sign-up-btn">Sign up</button>
         </div>
         <img src="./assets/bee_1920.jpg" alt="Bee">
@@ -34,14 +35,21 @@
     </div>
   </div>
 
-
   <div class="info">
     <h2>most-known websites for CP</h2>
     <div class="card-collection">
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
+      <div class="card">
+        <img src="./assets/codeforces.png" alt="codeforces logo">
+        <p>Codeforces known for its famous periodic contests (div1, div2, div3, div4)</p>
+      </div>
+      <div class="card">
+        <img src="./assets/atcoder.png" alt="codeforces logo">
+        <p>AtCoder is Japanese website. Its problems related more to knowledge and algorithms</p>
+      </div>
+      <div class="card">
+        <img src="./assets/leetcode.png" alt="codeforces logo">
+        <p>LeetCode is the best for interview preparation</p>
+      </div>
     </div>
   </div>
 
