--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
   </div>
 
   <div class="quote">
-    <p></p>
-    <p></p>
+    <div>
+      <p class="quote-p">If debugging is the process of removing software bugs, then programming must be the process of
+        putting them in</p>
+      <p class="author-p">- Edsger Dijkstra</p>
+    </div>
   </div>
 
   <div class="sign-up-call">
