--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="quote">
     <div>
       <p class="quote-p">If debugging is the process of removing software bugs, then programming must be the process of
-        putting them in</p>
+        putting them in.</p>
       <p class="author-p">- Edsger Dijkstra</p>
     </div>
   </div>
