Finish sign up call sectoin html and css

--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
   </div>
 
   <div class="sign-up-call">
-    <div>
-      <h4>Call to action It's time!</h4>
-      <p></p>
+    <div class="sign-up-call-centered">
+      <div>
+        <h4 class="sign-up-h">Call to action! It's time!</h4>
+        <p class="sign-up-p">sign up for our website by clicking that button right over there!</p>
+      </div>
+      <button class="sign-up-call-btn">Sign up</button>
     </div>
-    <button>Sign up</button>
   </div>
 
   <div class="footer">
